# confparse

./: .gitignore
src/: CMakeLists.txt  main.cpp  result.hpp  test.conf  util.hpp
